2015-08-19  klen

	* Added muffin_peewee.field.JSONField

2015-03-30  klen

	* Version 0.1.0
	* Initial release